Fixed formatting for links in documents created by markdown for visibility

--- a/theme/source/scss/style.scss
+++ b/theme/source/scss/style.scss
@@ -15,7 +15,8 @@ $link-active: $grey-light;
 $title-color: $grey-lighter;
 $subtitle-color: $grey-light;
 $footer-background-color: $body-background-color;
-.link {
+
+.link, .content a {
 	background-color: $grey-darker;
 }
 .footer,.title,.subtitle,.card-header-title,.card-header-icon,.link,.tag,time {
